--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "waypoints": "4.0.1"
   },
   "devDependencies": {
+    "jpegtran-bin": "^3.2.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
